Profile now displays their language Banner is aligned correctly now

--- a/theme/default/main/css/main.css
+++ b/theme/default/main/css/main.css
@@ -69,6 +69,8 @@ meter{
 
 #bannerRight{
     float: right;
+    right: -11px;
+    position: relative;
 }
 
 #shortcuts{
